// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<ExpandButtonGroup /> should render its children content 1`] = `
.c0 {
  position: relative;
  -webkit-box-pack: space-around;
  -webkit-justify-content: space-around;
  -ms-flex-pack: space-around;
  justify-content: space-around;
}

@media (max-width:41.6875em) {
  .c0 {
    -webkit-box-pack: center;
    -webkit-justify-content: center;
    -ms-flex-pack: center;
    justify-content: center;
  }

  .c0 *:first-child {
    border-top-right-radius: 0;
    border-bottom-right-radius: 0;
  }

  .c0 *:first-child:not(:only-child) {
    border-right-width: 0;
  }

  .c0 *:last-child {
    border-top-left-radius: 0;
    border-bottom-left-radius: 0;
  }

  .c0 *:not(:first-child):not(:last-child) {
    border-right-width: 0;
    border-radius: 0;
  }

  .c0 *:only-child {
    border-radius: 6px;
  }
}

<FlexBox
  className="c0"
  theme={
    Object {
      "radius": Object {
        "buttons": "6px",
      },
    }
  }
>
  &lt;button&gt;ciao&lt;/button&gt;
</FlexBox>
`;

exports[`<ExpandButtonGroup /> should render its css w/ props justifyContent 1`] = `
.c0 {
  position: relative;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
}

@media (max-width:41.6875em) {
  .c0 {
    -webkit-box-pack: center;
    -webkit-justify-content: center;
    -ms-flex-pack: center;
    justify-content: center;
  }

  .c0 *:first-child {
    border-top-right-radius: 0;
    border-bottom-right-radius: 0;
  }

  .c0 *:first-child:not(:only-child) {
    border-right-width: 0;
  }

  .c0 *:last-child {
    border-top-left-radius: 0;
    border-bottom-left-radius: 0;
  }

  .c0 *:not(:first-child):not(:last-child) {
    border-right-width: 0;
    border-radius: 0;
  }

  .c0 *:only-child {
    border-radius: 6px;
  }
}

<FlexBox
  className="c0"
  justifyContent="space-between"
  theme={
    Object {
      "radius": Object {
        "buttons": "6px",
      },
    }
  }
/>
`;

exports[`<ExpandButtonGroup /> should render its css w/ props radius 1`] = `
.c0 {
  position: relative;
  -webkit-box-pack: space-around;
  -webkit-justify-content: space-around;
  -ms-flex-pack: space-around;
  justify-content: space-around;
}

@media (max-width:41.6875em) {
  .c0 {
    -webkit-box-pack: center;
    -webkit-justify-content: center;
    -ms-flex-pack: center;
    justify-content: center;
  }

  .c0 *:first-child {
    border-top-right-radius: 0;
    border-bottom-right-radius: 0;
  }

  .c0 *:first-child:not(:only-child) {
    border-right-width: 0;
  }

  .c0 *:last-child {
    border-top-left-radius: 0;
    border-bottom-left-radius: 0;
  }

  .c0 *:not(:first-child):not(:last-child) {
    border-right-width: 0;
    border-radius: 0;
  }

  .c0 *:only-child {
    border-radius: 100px;
  }
}

<FlexBox
  className="c0"
  radius="100px"
  theme={
    Object {
      "radius": Object {
        "buttons": "6px",
      },
    }
  }
/>
`;

exports[`<MiniButtonGroup /> should render its children content 1`] = `
.c0 {
  position: relative;
}

.c0 *:first-child {
  border-top-right-radius: 0;
  border-bottom-right-radius: 0;
}

.c0 *:first-child:not(:only-child) {
  border-right-width: 0;
}

.c0 *:last-child {
  border-top-left-radius: 0;
  border-bottom-left-radius: 0;
}

.c0 *:not(:first-child):not(:last-child) {
  border-right-width: 0;
  border-radius: 0;
}

.c0 *:only-child {
  border-radius: 6px;
}

<FlexBox
  className="c0"
  theme={
    Object {
      "radius": Object {
        "buttons": "6px",
      },
    }
  }
>
  &lt;button&gt;ciao&lt;/button&gt;
</FlexBox>
`;

exports[`<MiniButtonGroup /> should render its css w/ props radius 1`] = `
.c0 {
  position: relative;
}

.c0 *:first-child {
  border-top-right-radius: 0;
  border-bottom-right-radius: 0;
}

.c0 *:first-child:not(:only-child) {
  border-right-width: 0;
}

.c0 *:last-child {
  border-top-left-radius: 0;
  border-bottom-left-radius: 0;
}

.c0 *:not(:first-child):not(:last-child) {
  border-right-width: 0;
  border-radius: 0;
}

.c0 *:only-child {
  border-radius: 100px;
}

<FlexBox
  className="c0"
  radius="100px"
  theme={
    Object {
      "radius": Object {
        "buttons": "6px",
      },
    }
  }
/>
`;

exports[`<StyledButtonGroup /> should render its children content 1`] = `
.c0 {
  position: relative;
}

@media (max-width:41.6875em) {
  .c0 {
    display: block;
    width: 100%;
  }
}

@media (min-width:41.75em) {
  .c0 *:first-child {
    border-top-right-radius: 0;
    border-bottom-right-radius: 0;
  }

  .c0 *:first-child:not(:only-child) {
    border-right-width: 0;
  }

  .c0 *:last-child {
    border-top-left-radius: 0;
    border-bottom-left-radius: 0;
  }

  .c0 *:not(:first-child):not(:last-child) {
    border-right-width: 0;
    border-radius: 0;
  }

  .c0 *:only-child {
    border-radius: 6px;
  }
}

@media (max-width:41.6875em) {
  .c0 * {
    display: block;
    width: 100%;
  }

  .c0 *:last-child {
    margin-bottom: 0;
  }
}

<FlexBox
  className="c0"
  theme={
    Object {
      "radius": Object {
        "buttons": "6px",
      },
    }
  }
>
  &lt;button&gt;ciao&lt;/button&gt;
</FlexBox>
`;

exports[`<StyledButtonGroup /> should render its css w/ props bottomSpace 1`] = `
.c0 {
  position: relative;
}

@media (max-width:41.6875em) {
  .c0 {
    display: block;
    width: 100%;
  }
}

@media (min-width:41.75em) {
  .c0 *:first-child {
    border-top-right-radius: 0;
    border-bottom-right-radius: 0;
  }

  .c0 *:first-child:not(:only-child) {
    border-right-width: 0;
  }

  .c0 *:last-child {
    border-top-left-radius: 0;
    border-bottom-left-radius: 0;
  }

  .c0 *:not(:first-child):not(:last-child) {
    border-right-width: 0;
    border-radius: 0;
  }

  .c0 *:only-child {
    border-radius: 6px;
  }
}

@media (max-width:41.6875em) {
  .c0 * {
    display: block;
    width: 100%;
    margin-bottom: 100px;
  }

  .c0 *:last-child {
    margin-bottom: 0;
  }
}

<FlexBox
  bottomSpace="100px"
  className="c0"
  theme={
    Object {
      "radius": Object {
        "buttons": "6px",
      },
    }
  }
>
  <Button
    actioncolor=""
    theme={
      Object {
        "brand": "#00BBEF",
        "fonts": Object {
          "buttons": Object {
            "fontFamily": "inherit",
            "fontWeight": "inherit",
          },
        },
        "radius": Object {
          "buttons": "6px",
        },
      }
    }
  >
    Uno
  </Button>
  <Button
    actioncolor=""
    theme={
      Object {
        "brand": "#00BBEF",
        "fonts": Object {
          "buttons": Object {
            "fontFamily": "inherit",
            "fontWeight": "inherit",
          },
        },
        "radius": Object {
          "buttons": "6px",
        },
      }
    }
  >
    Due
  </Button>
  <Button
    actioncolor=""
    theme={
      Object {
        "brand": "#00BBEF",
        "fonts": Object {
          "buttons": Object {
            "fontFamily": "inherit",
            "fontWeight": "inherit",
          },
        },
        "radius": Object {
          "buttons": "6px",
        },
      }
    }
  >
    Tre
  </Button>
  <Button
    actioncolor=""
    theme={
      Object {
        "brand": "#00BBEF",
        "fonts": Object {
          "buttons": Object {
            "fontFamily": "inherit",
            "fontWeight": "inherit",
          },
        },
        "radius": Object {
          "buttons": "6px",
        },
      }
    }
  >
    Quattro
  </Button>
</FlexBox>
`;

exports[`<StyledButtonGroup /> should render its css w/ props radius 1`] = `
.c0 {
  position: relative;
}

@media (max-width:41.6875em) {
  .c0 {
    display: block;
    width: 100%;
  }
}

@media (min-width:41.75em) {
  .c0 *:first-child {
    border-top-right-radius: 0;
    border-bottom-right-radius: 0;
  }

  .c0 *:first-child:not(:only-child) {
    border-right-width: 0;
  }

  .c0 *:last-child {
    border-top-left-radius: 0;
    border-bottom-left-radius: 0;
  }

  .c0 *:not(:first-child):not(:last-child) {
    border-right-width: 0;
    border-radius: 0;
  }

  .c0 *:only-child {
    border-radius: 100px;
  }
}

@media (max-width:41.6875em) {
  .c0 * {
    display: block;
    width: 100%;
  }

  .c0 *:last-child {
    margin-bottom: 0;
  }
}

<FlexBox
  className="c0"
  radius="100px"
  theme={
    Object {
      "radius": Object {
        "buttons": "6px",
      },
    }
  }
/>
`;
